2006-05-27  Richard Guenther  <rguenther@suse.de>

	* fastjar.texi: Don't use gcc-vers.texi.
	* Makefile.am: Don't generate it.
	* Makefile.in: Re-generate.

2006-05-27  Richard Guenther  <rguenther@suse.de>

	* fastjar.texi: Pull in the only macro we need from
	gcc-common.texi.

2006-05-27  Richard Guenther  <rguenther@suse.de>

	* texi2pod.pl: Copy from gcc/contrib.

2006-05-27  Richard Guenther  <rguenther@suse.de>

	* configure.ac: Change version to 0.92 from 0.92-gcc.
	Remove configury for using in-tree zlib, instead always
	require an installed zlib for build.
	* Makefile.am: Remove gcc specific parts.
	* configure: Re-generated.
	* Makefile.in: Likewise.
	* aclocal.m4: Likewise.

2006-05-27  Richard Guenther  <rguenther@suse.de>

	* jargrep.c: Include regex.h instead of xregex.h.  Removes
	dependency on internal libiberty includes.

2006-05-27  Richard Guenther  <rguenther@suse.de>

	* fastjar.texi: Correct menu entry for the now GFDL license.

2006-02-08  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* jartool.h (ACTION_INDEX): New macro.
	* jartool.c (main): Handle -i option.
	* fastjar.texi (Invoking fastjar): Add description of -i option.

2006-01-31  Tom Tromey  <tromey@redhat.com>

	* jartool.c (version): Use 2006.
	* jargrep.c (version): Use 2006.

2005-11-29  Tom Tromey  <tromey@redhat.com>

	* compress.c (write_data): Mark 'ze' as unused.
	* jartool.h (__attribute__): New define.
	* shift.c (shift_up): Added cast.
	(shift_down): Likewise.
	* jartool.c (help): Split string constant.

2005-06-29  Kelley Cook  <kcook@gcc.gnu.org>

	* all files: Update FSF address.

2005-05-17  Kelley Cook  <kcook@gcc.gnu.org>

	* configure.ac: Use AC_C_BIGENDIAN instead of AC_C_BIGENDIAN_CROSS.
	Use AC_CHECK_SIZEOF instead of AC_COMPILE_CHECK_SIZEOF.
	* Makefile.am: Remove ACLOCAL_AMFLAGS.
	* aclocal.m4, Makefile.in, configure, config.h.in: Regenerate.

2005-03-28  Marcin Dalecki  <martin@dalecki.de>

	* jartool.c (main): Indentation fixlet.
	(add_entry): Likewise.