@@ -1,3 +1,8 @@
+2006-07-12  Richard Guenther  <rguenther@suse.de>
+
+	* jartool.c (extract_jar): Do not allow directory traversal
+	to parents of the extraction root.
+
 2006-05-27  Richard Guenther  <rguenther@suse.de>
 
 	* fastjar.texi: Don't use gcc-vers.texi.
